Hw4 solve conflicts